{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 2598,
  "lineage": "8e22e0ff-13eb-62af-90e8-8b4f22de34de",
  "resources": [
    {
      "module": "module.melbeied",
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:599271616820:loadbalancer/app/mainALB/b063bd7efb19a9c4",
            "arn_suffix": "app/mainALB/b063bd7efb19a9c4",
            "dns_name": "mainALB-1343743960.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:599271616820:loadbalancer/app/mainALB/b063bd7efb19a9c4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mainALB",
            "security_groups": [
              "sg-0d8c7acb47134c56b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b8aebb64ec032331"
              },
              {
                "subnet_id": "subnet-0e5008e7cbf8d58fc"
              }
            ],
            "subnets": [
              "subnet-0b8aebb64ec032331",
              "subnet-0e5008e7cbf8d58fc"
            ],
            "vpc_id": "vpc-0aec2b72afcc10663",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.melbeied.aws_security_group.alb-sg",
            "module.melbeied.aws_subnet.public",
            "module.melbeied.aws_vpc.melbeied"
          ]
        }
      ]
    },
    {
      "module": "module.melbeied",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "listener_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:599271616820:listener/app/mainALB/b063bd7efb19a9c4/630b38209dc363ac",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:599271616820:targetgroup/front-alb-tg/656503d218f7a926",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:599271616820:listener/app/mainALB/b063bd7efb19a9c4/630b38209dc363ac",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:599271616820:loadbalancer/app/mainALB/b063bd7efb19a9c4",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.melbeied.aws_alb.alb",
            "module.melbeied.aws_alb_target_group.alb_tg_front",
            "module.melbeied.aws_security_group.alb-sg",
            "module.melbeied.aws_subnet.public",
            "module.melbeied.aws_vpc.melbeied"
          ]
        }
      ]
    },
    {
      "module": "module.melbeied",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "alb_tg_front",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:599271616820:targetgroup/front-alb-tg/656503d218f7a926",
            "arn_suffix": "targetgroup/front-alb-tg/656503d218f7a926",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200,302",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:599271616820:targetgroup/front-alb-tg/656503d218f7a926",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "front-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0aec2b72afcc10663"
          },
          "dependencies": [
            "module.melbeied.aws_vpc.melbeied"
          ]
        }
      ]
    },
    {
      "module": "module.melbeied",
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "alb_bfornt_http",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:599271616820:targetgroup/front-alb-tg/656503d218f7a926-20200713215908446100000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:599271616820:targetgroup/front-alb-tg/656503d218f7a926",
            "target_id": "i-01e8e36dde3e401df"
          },
          "dependencies": [
            "module.melbeied.aws_alb_target_group.alb_tg_front",
            "module.melbeied.aws_instance.wp",
            "module.melbeied.aws_security_group.front_sg",
            "module.melbeied.aws_subnet.front",
            "module.melbeied.aws_vpc.melbeied"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:599271616820:targetgroup/front-alb-tg/656503d218f7a926-20200713215908543000000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:599271616820:targetgroup/front-alb-tg/656503d218f7a926",
            "target_id": "i-04db43957f0cc1229"
          },
          "dependencies": [
            "module.melbeied.aws_alb_target_group.alb_tg_front",
            "module.melbeied.aws_instance.wp",
            "module.melbeied.aws_security_group.front_sg",
            "module.melbeied.aws_subnet.front",
            "module.melbeied.aws_vpc.melbeied"
          ]
        }
      ]
    },
    {
      "module": "module.melbeied",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-098ecedf3fc75c33c",
            "public_dns": "ec2-50-17-230-199.compute-1.amazonaws.com",
            "public_ip": "50.17.230.199",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.melbeied",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c24eddbea3a65909",
            "arn": "arn:aws:ec2:us-east-1:599271616820:instance/i-0931de3970eed6088",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0931de3970eed6088",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "id_rsa_aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e9b0ac610725f20a",
            "private_dns": "ip-10-0-0-15.ec2.internal",
            "private_ip": "10.0.0.15",
            "public_dns": "ec2-52-207-236-144.compute-1.amazonaws.com",
            "public_ip": "52.207.236.144",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-07322fab2dd79b879",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0b8aebb64ec032331",
            "tags": {
              "Name": "BastionVM-us-east-1a"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-060e7858a42b6e34d"
            ]
          },
          "dependencies": [
            "module.melbeied.aws_security_group.public_alb_sg",
            "module.melbeied.aws_subnet.public",
            "module.melbeied.aws_vpc.melbeied"
          ]
        }
      ]
    },
    {
      "module": "module.melbeied",
      "mode": "managed",
      "type": "aws_instance",
      "name": "wp",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c24eddbea3a65909",
            "arn": "arn:aws:ec2:us-east-1:599271616820:instance/i-01e8e36dde3e401df",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01e8e36dde3e401df",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "id_rsa_aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0011528cde125cb6b",
            "private_dns": "ip-10-0-0-38.ec2.internal",
            "private_ip": "10.0.0.38",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0699edea15156d411",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dee3809b9dde2bf6",
            "tags": {
              "Name": "wp_vm-us-east-1a"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ff4563771b0b2654"
            ]
          },
          "dependencies": [
            "module.melbeied.aws_security_group.front_sg",
            "module.melbeied.aws_subnet.front",
            "module.melbeied.aws_vpc.melbeied"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c24eddbea3a65909",
            "arn": "arn:aws:ec2:us-east-1:599271616820:instance/i-04db43957f0cc1229",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04db43957f0cc1229",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "id_rsa_aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f7968b40966b8c61",
            "private_dns": "ip-10-0-1-62.ec2.internal",
            "private_ip": "10.0.1.62",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-020d0fe22f8c2954d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04e0acbaf67aa540b",
            "tags": {
              "Name": "wp_vm-us-east-1a"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ff4563771b0b2654"
            ]
          },
          "dependencies": [
            "module.melbeied.aws_security_group.front_sg",
            "module.melbeied.aws_subnet.front",
            "module.melbeied.aws_vpc.melbeied"
          ]
        }
      ]
    },
    {
      "module": "module.melbeied",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599271616820:internet-gateway/igw-097d25588f00a7498",
            "id": "igw-097d25588f00a7498",
            "owner_id": "599271616820",
            "tags": {
              "Name": "main_igw"
            },
            "vpc_id": "vpc-0aec2b72afcc10663"
          },
          "dependencies": [
            "module.melbeied.aws_vpc.melbeied"
          ]
        }
      ]
    },
    {
      "module": "module.melbeied",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-098ecedf3fc75c33c",
            "id": "nat-03cf0520888294749",
            "network_interface_id": "eni-0f7a8c1ba75eba65b",
            "private_ip": "10.0.0.7",
            "public_ip": "50.17.230.199",
            "subnet_id": "subnet-0b8aebb64ec032331",
            "tags": {
              "Name": "Nat_az_1a"
            }
          },
          "dependencies": [
            "module.melbeied.aws_eip.nat_eip",
            "module.melbeied.aws_internet_gateway.igt",
            "module.melbeied.aws_subnet.public",
            "module.melbeied.aws_vpc.melbeied"
          ]
        }
      ]
    },
    {
      "module": "module.melbeied",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "back_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0fb09ec84eaa941f9",
            "owner_id": "599271616820",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-03cf0520888294749",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "back_rt"
            },
            "vpc_id": "vpc-0aec2b72afcc10663"
          },
          "dependencies": [
            "module.melbeied.aws_eip.nat_eip",
            "module.melbeied.aws_internet_gateway.igt",
            "module.melbeied.aws_nat_gateway.nat",
            "module.melbeied.aws_subnet.public",
            "module.melbeied.aws_vpc.melbeied"
          ]
        }
      ]
    },
    {
      "module": "module.melbeied",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "front_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-060cd29f61617bce9",
            "owner_id": "599271616820",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-03cf0520888294749",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "front_rt"
            },
            "vpc_id": "vpc-0aec2b72afcc10663"
          },
          "dependencies": [
            "module.melbeied.aws_eip.nat_eip",
            "module.melbeied.aws_internet_gateway.igt",
            "module.melbeied.aws_nat_gateway.nat",
            "module.melbeied.aws_subnet.public",
            "module.melbeied.aws_vpc.melbeied"
          ]
        }
      ]
    },
    {
      "module": "module.melbeied",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0738544e6dc5ca95f",
            "owner_id": "599271616820",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-097d25588f00a7498",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rt"
            },
            "vpc_id": "vpc-0aec2b72afcc10663"
          },
          "dependencies": [
            "module.melbeied.aws_internet_gateway.igt",
            "module.melbeied.aws_vpc.melbeied"
          ]
        }
      ]
    },
    {
      "module": "module.melbeied",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "front_ass",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028242edec4492686",
            "route_table_id": "rtb-060cd29f61617bce9",
            "subnet_id": "subnet-0dee3809b9dde2bf6"
          },
          "dependencies": [
            "module.melbeied.aws_eip.nat_eip",
            "module.melbeied.aws_internet_gateway.igt",
            "module.melbeied.aws_nat_gateway.nat",
            "module.melbeied.aws_route_table.front_rt",
            "module.melbeied.aws_subnet.front",
            "module.melbeied.aws_subnet.public",
            "module.melbeied.aws_vpc.melbeied"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00047bac8e5a47439",
            "route_table_id": "rtb-060cd29f61617bce9",
            "subnet_id": "subnet-04e0acbaf67aa540b"
          },
          "dependencies": [
            "module.melbeied.aws_eip.nat_eip",
            "module.melbeied.aws_internet_gateway.igt",
            "module.melbeied.aws_nat_gateway.nat",
            "module.melbeied.aws_route_table.front_rt",
            "module.melbeied.aws_subnet.front",
            "module.melbeied.aws_subnet.public",
            "module.melbeied.aws_vpc.melbeied"
          ]
        }
      ]
    },
    {
      "module": "module.melbeied",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_ass",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0061549c0506980f2",
            "route_table_id": "rtb-0738544e6dc5ca95f",
            "subnet_id": "subnet-0b8aebb64ec032331"
          },
          "dependencies": [
            "module.melbeied.aws_internet_gateway.igt",
            "module.melbeied.aws_route_table.public_rt",
            "module.melbeied.aws_subnet.public",
            "module.melbeied.aws_vpc.melbeied"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce64ad1bff833c26",
            "route_table_id": "rtb-0738544e6dc5ca95f",
            "subnet_id": "subnet-0e5008e7cbf8d58fc"
          },
          "dependencies": [
            "module.melbeied.aws_internet_gateway.igt",
            "module.melbeied.aws_route_table.public_rt",
            "module.melbeied.aws_subnet.public",
            "module.melbeied.aws_vpc.melbeied"
          ]
        }
      ]
    },
    {
      "module": "module.melbeied",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599271616820:security-group/sg-03f592cd8eb2ab42f",
            "description": "Allow HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f592cd8eb2ab42f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb_sg",
            "name_prefix": null,
            "owner_id": "599271616820",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB-SecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aec2b72afcc10663"
          },
          "dependencies": [
            "module.melbeied.aws_vpc.melbeied"
          ]
        }
      ]
    },
    {
      "module": "module.melbeied",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599271616820:security-group/sg-0d8c7acb47134c56b",
            "description": "Allow HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d8c7acb47134c56b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": null,
            "owner_id": "599271616820",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wamp.melbeied.net-ALB-tg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aec2b72afcc10663"
          },
          "dependencies": [
            "module.melbeied.aws_vpc.melbeied"
          ]
        }
      ]
    },
    {
      "module": "module.melbeied",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "back_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599271616820:security-group/sg-0bd9c3c1f03842911",
            "description": "Port 22, 3306 from vpc subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/22"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bd9c3c1f03842911",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/22"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/22"
                ],
                "description": "flow to enable JDBC access",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/22"
                ],
                "description": "flow to enable MEMCACHED access",
                "from_port": 11211,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 11211
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/22"
                ],
                "description": "flow to enable SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SG_back_80_443",
            "name_prefix": null,
            "owner_id": "599271616820",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG_back_22_3306"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aec2b72afcc10663"
          },
          "dependencies": [
            "module.melbeied.aws_vpc.melbeied"
          ]
        }
      ]
    },
    {
      "module": "module.melbeied",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "front_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599271616820:security-group/sg-0ff4563771b0b2654",
            "description": "Port 22, 80, 443 from vpc subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ff4563771b0b2654",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/22"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/22"
                ],
                "description": "flow to enable HTTP requests",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/22"
                ],
                "description": "flow to enable SSH requests",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/22"
                ],
                "description": "flow to enable TLS requests",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "SG_front_80_443",
            "name_prefix": null,
            "owner_id": "599271616820",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private_front_sg_for_22_80_443_flow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aec2b72afcc10663"
          },
          "dependencies": [
            "module.melbeied.aws_vpc.melbeied"
          ]
        }
      ]
    },
    {
      "module": "module.melbeied",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_alb_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599271616820:security-group/sg-060e7858a42b6e34d",
            "description": "Port 22, 80, 443 from all world",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-060e7858a42b6e34d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "worldwide",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "worldwide",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "worldwide",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG_public_22_80_443",
            "name_prefix": null,
            "owner_id": "599271616820",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public_sg_for_22_80_443_flow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aec2b72afcc10663"
          },
          "dependencies": [
            "module.melbeied.aws_vpc.melbeied"
          ]
        }
      ]
    },
    {
      "module": "module.melbeied",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "back",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599271616820:subnet/subnet-0364c5795b7d5716d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.64/27",
            "id": "subnet-0364c5795b7d5716d",
            "map_public_ip_on_launch": false,
            "owner_id": "599271616820",
            "tags": {
              "Name": "sn_back_1a"
            },
            "vpc_id": "vpc-0aec2b72afcc10663"
          },
          "dependencies": [
            "module.melbeied.aws_vpc.melbeied"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599271616820:subnet/subnet-099349c3b20bd59cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.64/27",
            "id": "subnet-099349c3b20bd59cd",
            "map_public_ip_on_launch": false,
            "owner_id": "599271616820",
            "tags": {
              "Name": "sn_back_1b"
            },
            "vpc_id": "vpc-0aec2b72afcc10663"
          },
          "dependencies": [
            "module.melbeied.aws_vpc.melbeied"
          ]
        }
      ]
    },
    {
      "module": "module.melbeied",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "front",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599271616820:subnet/subnet-0dee3809b9dde2bf6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.32/27",
            "id": "subnet-0dee3809b9dde2bf6",
            "map_public_ip_on_launch": false,
            "owner_id": "599271616820",
            "tags": {
              "Name": "sn_front_1a"
            },
            "vpc_id": "vpc-0aec2b72afcc10663"
          },
          "dependencies": [
            "module.melbeied.aws_vpc.melbeied"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599271616820:subnet/subnet-04e0acbaf67aa540b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.32/27",
            "id": "subnet-04e0acbaf67aa540b",
            "map_public_ip_on_launch": false,
            "owner_id": "599271616820",
            "tags": {
              "Name": "sn_front_1b"
            },
            "vpc_id": "vpc-0aec2b72afcc10663"
          },
          "dependencies": [
            "module.melbeied.aws_vpc.melbeied"
          ]
        }
      ]
    },
    {
      "module": "module.melbeied",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599271616820:subnet/subnet-0b8aebb64ec032331",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/27",
            "id": "subnet-0b8aebb64ec032331",
            "map_public_ip_on_launch": true,
            "owner_id": "599271616820",
            "tags": {
              "Name": "sn_public_1a"
            },
            "vpc_id": "vpc-0aec2b72afcc10663"
          },
          "dependencies": [
            "module.melbeied.aws_vpc.melbeied"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599271616820:subnet/subnet-0e5008e7cbf8d58fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/27",
            "id": "subnet-0e5008e7cbf8d58fc",
            "map_public_ip_on_launch": true,
            "owner_id": "599271616820",
            "tags": {
              "Name": "sn_public_1b"
            },
            "vpc_id": "vpc-0aec2b72afcc10663"
          },
          "dependencies": [
            "module.melbeied.aws_vpc.melbeied"
          ]
        }
      ]
    },
    {
      "module": "module.melbeied",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "melbeied",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599271616820:vpc/vpc-0aec2b72afcc10663",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/22",
            "default_network_acl_id": "acl-0e8fcc22325be7d68",
            "default_route_table_id": "rtb-05efb06bfcee2a899",
            "default_security_group_id": "sg-01f4fb82ad2c28ede",
            "dhcp_options_id": "dopt-25f5435f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0aec2b72afcc10663",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05efb06bfcee2a899",
            "owner_id": "599271616820",
            "tags": {
              "Name": "main_vpc"
            }
          }
        }
      ]
    }
  ]
}